k8-app-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:  
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port: 
                  number: 3000
